--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "openai": "^4.83.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-live": "^4.1.8",
