--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-component-generator",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,39 +10,61 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.20.0",
+    "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^4.0.0",
+    "@mistralai/mistralai": "^1.5.0",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.66.0",
+    "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "escodegen": "^2.1.0",
+    "esprima": "^4.0.1",
     "framer-motion": "^12.4.2",
+    "hono": "^4.6.14",
     "lucide-react": "^0.475.0",
     "monaco-editor": "^0.52.2",
-    "next": "15.1.7",
+    "next": "14.2.18",
     "next-themes": "^0.4.4",
-    "openai": "^4.83.0",
+    "node-appwrite": "^15.0.0",
+    "nuqs": "^2.3.2",
+    "openai": "^4.85.1",
+    "prettier": "^3.5.1",
     "react": "18.3.1",
+    "react-ace": "^14.0.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-jsx-parser": "^2.3.0",
     "react-live": "^4.1.8",
     "react-resizable-panels": "^2.1.7",
+    "react-use": "^17.6.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/escodegen": "^0.0.10",
+    "@types/esprima": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
