--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^4.0.0",
     "@mistralai/mistralai": "^1.5.0",
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -30,12 +31,16 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.66.0",
+    "@types/eslint": "^9.6.1",
+    "@webcontainer/api": "^1.5.1-internal.9",
+    "ace-builds": "^1.39.0",
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "escodegen": "^2.1.0",
+    "eslint": "^9.21.0",
     "esprima": "^4.0.1",
     "framer-motion": "^12.4.2",
     "hono": "^4.6.14",
@@ -56,6 +61,7 @@
     "react-live": "^4.1.8",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
