--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@hono/zod-validator": "^0.4.2",
     "@hookform/resolvers": "^4.0.0",
+    "@langchain/core": "^1.1.15",
+    "@langchain/google-genai": "^2.1.10",
     "@mistralai/mistralai": "^1.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -41,6 +43,7 @@
     "eslint": "^9.21.0",
     "esprima": "^4.0.1",
     "hono": "^4.6.14",
+    "langchain": "^1.2.10",
     "lucide-react": "^0.475.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
